# Atarax-AI

./: .coverage  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  api.py  api.spec  build_backend.ps1  build_backend.sh  chat_example.db  clean.ps1  clean.sh  conda_env.sh  env.sh  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_frontend.sh  setup_llama.cpp.sh  setup_third_party.sh  vault.check  vault.salt
ataraxai/: CMakeLists.txt  __init__.py  main.cc
ataraxai-ui/src-tauri/: Cargo.toml  tauri.conf.json
ataraxai-ui/src-tauri/src/: lib.rs  main.rs
ataraxai/app_logic/: ataraxai_cli.py  ataraxai_orchestrator.py  main.py  preferences_manager.py  prompt_utils.py  ui_pyside.py
ataraxai/app_logic/modules/audio/: sound_catcher.py  vad_processor.py
ataraxai/app_logic/modules/chat/: chat_context_manager.py  chat_database.py  chat_database_manager.py  chat_memory.py  chat_models.py
ataraxai/app_logic/modules/prompt_engine/: chain_runner.py  context_manager.py  prompt_loader.py  prompt_manager.py  prompt_template.py  task_manager.py  task_registry.py
ataraxai/app_logic/modules/rag/: ataraxai_embedder.py  ataraxai_rag_manager.py  file_observer.py  rag_ingestor.py  rag_manifest.py  rag_store.py  rag_update_handler.py  rag_updater.py  resilient_indexer.py  smart_chunker.py
ataraxai/app_logic/utils/: ataraxai_logger.py  get_events_from_ics.py  get_text_from_email_payload.py  llama_config_manager.py  rag_config_manager.py  security_manager.py  whisper_config_manager.py
ataraxai/app_logic/utils/config_schemas/: llama_config_schema.py  rag_config_schema.py  sound_recording_schema.py  user_preferences_schema.py  whisper_config_schema.py
ataraxai/core_ai/: CMakeLists.txt  core_ai.hh
ataraxai/core_ai/benchmarker/: benchmarker.hh  model_benchmarker.hh
ataraxai/core_ai/benchmarker/system_infos/: cpu_info.hh  gpu_info.hh  memory_usage.hh
ataraxai/core_ai/benchmarker/utils/: utils.hh
ataraxai/core_ai/include/core_ai/: core_ai_service.hh  llama_interface.hh  model_benchmarker.hh  whisper_generation_params.hh  whisper_interface.hh  whisper_model_params.hh
ataraxai/core_ai/io_utils/: directory_utils.hh
ataraxai/core_ai/llama_interface/: start_llama_cli.hh  start_llama_server.hh
ataraxai/core_ai/src/: bindings.cc  core_ai_service.cc  llama_interface.cc  main.cc  whisper_interface.cc
ataraxai/core_ai/src/benchmarker/: benchmarker.hh  model_benchmarker.hh
ataraxai/core_ai/src/llama_interface/: llama_engine.hh  llama_server_manager.hh
ataraxai/core_ai/tests/: test_core_ai_service.cc  test_llama_integration.cc  test_whisper_integration.cc
ataraxai/gateway/: gateway_task_manager.py  request_manager.py  task_manager.py
ataraxai/hegemonikon/: CMakeLists.txt
ataraxai/hegemonikon/include/: core_ai.hh  core_ai_service.hh  llama_interface.hh  memory_locker.hh  model_benchmarker.hh  plateform_memory.hh  whisper_generation_params.hh  whisper_interface.hh  whisper_model_params.hh
ataraxai/hegemonikon/include/argon2/: kat.h
ataraxai/hegemonikon/include/hegemonikon/: model_benchmarker.hh  whisper_model_params.hh
ataraxai/hegemonikon/src/: bindings.cc  core_ai_service.cc  llama_interface.cc  main.cc  memomy_locker.cc  whisper_interface.cc
ataraxai/hegemonikon/src/argon2/: argon2-core.cpp  argon2-opt-core.cpp  argon2-ref-core.cpp  argon2.cpp  blake2b.c  kat.cpp
ataraxai/hegemonikon/src/benchmarker/: benchmark_result.hh
ataraxai/hegemonikon/src/llama_server_manager/: llama_server_manager.hh
ataraxai/hegemonikon/tests/: test_core_ai_service.cc  test_llama_integration.cc  test_memory_locker.cc  test_whisper_integration.cc
ataraxai/praxis/: ataraxai_orchestrator.py  katalepsis.py  preferences_manager.py
ataraxai/praxis/modules/audio/: sound_catcher.py  vad_processor.py
ataraxai/praxis/modules/benchmark/: benchmark_queue_manager.py  leaderboard_manager.py
ataraxai/praxis/modules/benchmarker/: benchmarker.py
ataraxai/praxis/modules/chat/: chat_context_manager.py  chat_database_manager.py  chat_models.py
ataraxai/praxis/modules/models_manager/: model_manager.py  models_manager.py
ataraxai/praxis/modules/rag/: rag_manifest.py  (+7 more)
ataraxai/praxis/utils/: app_config.py  app_directories.py  app_state.py  ataraxai_logger.py  ataraxai_settings.py  background_task_manager.py  chat_manager.py  configuration_manager.py  core_ai_service_manager.py  decorators.py  exceptions.py  input_validator.py  llama_config_manager.py  rag_config_manager.py  security_manager.py  service_status.py  services.py  setup_manager.py  user_preferences_manager.py  vault_manager.py  whisper_config_manager.py
ataraxai/prompt_engine/: base_task.py  context_manager.py  interfaces.py  prompt_loader.py  prompt_template.py  task_registry.py  task_runner.py
ataraxai/prompt_engine/interface/: __init__.py  llama_cpp_interface.py  whisper_cpp_interface.py
ataraxai/prompt_engine/specific_tasks/: answer_from_local_docs_task.py  image_captioning_task.py  ocr_and_summarize_task.py  summarize_text_task.py  workspace_calendar_events_task.py
ataraxai/prompt_templates/general/: summarize_text.txt
ataraxai/routes/: chat.py  chat_api_models.py  constant_messages.py  dependency_api.py  rag.py  rag_api_models.py  status.py  utils.py  vault.py  vault_api_models.py
ataraxai/routes/benchmark_route/: benchmark_api_models.py  benchmarker.py
ataraxai/routes/benchmarker_route/: benchmark_api_models.py  benchmarker.py
ataraxai/routes/chain_runner_route/: chain_runner.py  chain_runner_api_models.py
ataraxai/routes/chat_api/: chat.py  chat_api_models.py
ataraxai/routes/chat_route/: chat.py  chat_api_models.py
ataraxai/routes/core_ai_service/: core_ai_service.py  core_ai_service_api_models.py
ataraxai/routes/models_manager_api/: models_manager.py
ataraxai/routes/models_manager_route/: models_manager.py  models_manager_api_models.py
ataraxai/routes/rag_api/: rag.py
ataraxai/routes/rag_route/: rag.py  rag_api_models.py
ataraxai/routes/vault_api/: vault.py  vault_api_models.py
ataraxai/routes/vault_route/: vault.py  vault_api_models.py
(+285 files in other folders)
