[package]
name = "ataraxai-ui"
version = "0.1.0"
description = "AtaraxAI Desktop Application"
authors = ["Yannick Zoetgnande"]
edition = "2021"

[lib]
name = "ataraxai_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-shell = "2.3.0"

tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
